  files to a format understood by Hatari debugger 'symbols' command,
  and to clean 'nm' output of GCC & VBCC built a.out binaries for it

Fixed Games:
  Bolo (MFP, couldn't start a game)
  Captain Blood (IKBD, fixed problem when setting the clock)
  Fokker and Downfall (ACIA/IKBD, had regressed in Hatari v1.6.x)
  Super Hang On and Super Monaco GP (MFP, flickering rasters)

Fixed demos :
  Audio Artistic Demo by Big Alec (MFP, bad sample speed at start)


 Version 1.6.2 (2012-06-24):
 ---------------------------

Emulation:
- ST video changes :
  - Fixes a rare potential crash when running in color mode and switching
    to monochrome mode for more than one VBL (eg : protection code used
    in The European Demos and The Transbeauce II Demo)
  - add more timings for the 224 bytes overscan detection on STE
  - Correct write timing for BCHG/BCLR/BSET when removing borders
  - Fix to top/bottom border removal in a rare case
- IKBD/ACIA changes :
  - Handle commands 0x12 and 0x14 sent during the IKBD reset
    (enable both mouse and joystick reporting at the same time)
  - Handle the TX IRQ in the ACIA (bits CR6+CR5=0x01)
  - Implemented IKBD set-clock function
- Sound changes :
  - Improve YM2149 sound filtering to be closer to a real STF
  - Increase output volume for STE DMA sound (compared to the YM2149's volume)
- DSP changes :
  - Fix to DSP stack overflow handling
  - Fix DSP to be reset on emulation reset
- Old UAE core specific changes :
  - Changes in the prefetch code for some instructions
  - Correct PC in stack when JMP generates an illegal address exception
- WinUAE core specific changes :
  - 68040 MMU emulation fixes
  - Fix GEMDOS/VDI emulation (illegal opcode) handling
  - Fix WinUAE core to work with ST emulation (boot TOS 1.x)
  - Fix FPU to be enabled when switching to TT emulation
  - Fixes to FPU register value conversion
- Falcon changes :
  - Support for Falcon/Videl screen borders
  - Fixes to few Falcon IO registers