@@ -539,6 +539,13 @@ for border removal).</p>
 	  by Hatari at the moment</td>
     </tr>
     <tr>
+      <td>Inner Circle:
+      <a href="http://pouet.net/prod.php?which=3243">Decade Demo</a></td>
+      <td>1.7</td>
+      <td>Very good demo. Reset part requires Hatari &gt;= 1.7 to avoid flickering
+	  bottom border</td>
+    </tr>
+    <tr>
       <td>Lynx:
       <a href="http://pouet.net/prod.php?which=30934">BBS Intro 3</a></td>
       <td>1.5</td>
